--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "space-pen": "^5.1.1"
   },
   "packageDependencies": {
-    "bottom-dock": "^0.3.5"
+    "bottom-dock": "0.3.5"
   },
   "consumedServices": {
     "bottom-dock": {
